--- a/src/App.module.css
+++ b/src/App.module.css
@@ -3,9 +3,32 @@
     flex-direction: row;
 }
 
+.CardS {
+    background-color: white;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+    border-radius: 12px;
+    border-color: black;
+    width: 50%;
+    padding: 15px;
+    margin: 20px
+}
+
+.BigCardS {
+    background-color: white;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+    border-radius: 12px;
+    border-color: black;
+    width: 100%;
+    margin: 20px, 20px, 20px, 20px;
+    padding: 0, 20px, 0, 20px;
+}
+
 @media (max-width: 550px) {
     .row {
         display: flex;
-    flex-direction: column;
+        flex-direction: column;
+    }
+    .CardS {
+        width: 87%;
     }
 }
